Archive2/cb/bafe4b1d8594dd/output
+ gcc -O2 -Wall -Wextra -pedantic -pthread main.cpp -lssl
main.cpp: In function 'int main(int, char**)':
main.cpp:12:35: error: invalid conversion from 'unsigned char*' to 'char*' [-fpermissive]
 strcpy(userKey_,"0123456789123456");
                                   ^
main.cpp:13:30: error: invalid conversion from 'unsigned char*' to 'char*' [-fpermissive]
 strcpy(in_,"0123456789123456");
                              ^
main.cpp: At global scope:
main.cpp:6:5: warning: unused parameter 'argc' [-Wunused-parameter]
 int main(int argc, char* argv[])
     ^
main.cpp:6:5: warning: unused parameter 'argv' [-Wunused-parameter]
